--- a/nfcip-midlet/CHANGELOG
+++ b/nfcip-midlet/CHANGELOG
@@ -1,3 +1,9 @@
+1.1.2   (?)
+    - print a dot to the phone screen every successful send/receive loop to
+      make it easier to track progress when using two phones
+    - append the UID (obtained with getUID()) to the log when connection is 
+      established
+    
 1.1.1   (20090420)
     - make block size configurable (add UI components)
     - merge NFCIPConnection from NFCIP library to add support for setBlockSize
@@ -5,10 +11,10 @@
 	- added this CHANGELOG
 	    
 1.1     (20090419)
-	- make MIDlet interactive
-	- add licensing headers
-	- include AUTHORS, COPYING file
-	- update README to reflect version 1.1
+    - make MIDlet interactive
+    - add licensing headers
+    - include AUTHORS, COPYING file
+    - update README to reflect version 1.1
 
-1.0		(20090418)
-	- initial release
+1.0     (20090418)
+    - initial release
