--- a/nfcip-java/CHANGELOG
+++ b/nfcip-java/CHANGELOG
@@ -1,3 +1,8 @@
+1.0.3	(?)
+	- add javadoc target to build file
+	- change some protected modifiers to private (for now)
+	- remove resetNumberOfResets method
+	
 1.0.2	(20090605)
 	- print some performance metrics for every test run (-r) on the 
 	  command line. Can be used by "gnuplot"
