--- a/trunk/nfcip-midlet/CHANGELOG
+++ b/trunk/nfcip-midlet/CHANGELOG
@@ -1,3 +1,8 @@
+1.1.3	(?)
+	- add javadoc target to build file
+	- change some protected modifiers to private (for now)
+	- remove resetNumberOfResets method
+	
 1.1.2   (20090605)
 	- replace the "form" for printing progess information with TextField
 	  which is updated once in a while, way more efficient, the form makes 
