--- a/trunk/nfcip-midlet/CHANGELOG
+++ b/trunk/nfcip-midlet/CHANGELOG
@@ -1,4 +1,4 @@
-1.1.3	(?)
+1.2.0	(?)
 	- add javadoc target to build file
 	- change some protected modifiers to private (for now)
 	- remove resetNumberOfResets method
@@ -16,6 +16,10 @@
 	  complete
 	- return data is always an empty array, never null
 	- some Test MIDlet UI updates
+	- remove all the test code from the MIDlet and use the one from the 
+	  library instead as to have the same code base as the Java SE application
+	- export the option to set fake initiator/fake target from MIDlet UI
+	- set fake target as default
 
 1.1.2   (20090605)
 	- replace the "form" for printing progess information with TextField
