--- a/trunk/nfcip-java/README
+++ b/trunk/nfcip-java/README
@@ -1,4 +1,4 @@
-                          === Java NFCIP library ===
+           === Java NFCIPConnection library for Java SE and Java ME ===
                        http://nfcip-java.googlecode.com
 						 
                François Kooman <F.Kooman@student.science.ru.nl>
@@ -138,45 +138,10 @@ Now the "FAKE_INITIATOR" still seems the party to "initiate" the contact
 (i.e.: send the first message) while in reality there is a "dummy" message
 going from the FAKE_TARGET to the FAKE_INITIATOR. These extra modes make
 the switch transparent for the application.
- 
-Reliability Testing
-===================
-Adding the NFCIP library to the classpath is enough to use it. Included are 
-some simple tests that can be run from the command line (or from Eclipse):
-
-  $ java -cp dist/nfcip-java-1.0.jar ds.nfcip.tests.NFCIPTestMain
-  
-or specify any other path to where the nfcip-java JAR is located.
-
-See "--help" for more information on the parameters possible. One can use 
-"--list-readers" to find the attached readers, and use "--initiator" or 
-"--target" to specify the mode of operation. 
-
-Suppose one has two ACR122 readers attached to one computer, one can be set 
-to initiator and one to target and run the tests to send byte arrays between 
-one another:
-
-  $ java -cp dist/nfcip-java-1.0.jar \
-       ds.nfcip.tests.NFCIPTestMain -i -d 0 -m 100 -M 1000
-
-This will set the first device (-d 0) to initiator mode (-i) and start with 
-sending 100 bytes, then expecting the same 100 bytes back from the target 
-and then move on to 101 bytes, until 1000 is reached.
-
-For the target one would use:
-
-  $ java -cp dist/nfcip-java-1.0.jar \
-       ds.nfcip.tests.NFCIPTestMain -t -d 1 -m 100 -M 1000
-
-It is possible to enable various debugging levels to display an increasing 
-amount of details on the transfer. Without specifying anything nothing is 
-printed unless an error occurs. Use "--debug 1" to see progress information.
-Increase the value to show more details up to including the raw APDUs being
-sent to the ACR122.
 
 Issues
 ======
-There is an issue that when the protocol doesn't complete (user interrupted). 
-The next time the program is started it will not be able to connect to the 
-reader without unplugging the reader first. Maybe this can be solved by a 
-Runtime.addShutdownHook in Java.
+There is an issue that when the communication doesn't complete (user 
+interrupted). The next time the program is started it will not be able to 
+connect to the reader without unplugging the reader first. Maybe this can 
+be solved by a Runtime.addShutdownHook in Java.
