--- a/nfcip-java/CHANGELOG
+++ b/nfcip-java/CHANGELOG
@@ -1,3 +1,16 @@
+1.3.0	(?)
+	- make more members in NFCIPAbstract private when they don't need to be 
+	  public
+	- move setting transmissionMode to NFCIPAbstract
+	- add dummy block constant to NFCIPAbstract and add a check method to
+	  NFCIPUtils
+	- update some JavaDoc comments
+	- add a rawClose method to be implemented by the NFCIPConnection sub 
+	  classes
+	- fix the debugMessage stuff, take it out of NFCIPUtils and put it in 
+	  NFCIPAbstract & rename it to "log" instead of "debug"
+	- take some irrelevant stuff out of the interface
+	
 1.2.0	(20090614)
 	- add javadoc target to build file
 	- remove resetNumberOfResets method
