--- a/trunk/nfcip-java-tests/CHANGELOG
+++ b/trunk/nfcip-java-tests/CHANGELOG
@@ -1,3 +1,9 @@
+1.3.0	(?)
+	General:
+	- make it work again with new API of nfcip-java
+	- update MIDlet and TestApp to use "logging" instead of "debugging" as 
+	  names for the new logging feature
+
 1.2.0	(20090614)
 	General:
 	- put all external libraries in lib/lib.properties to put all version
